<resources>
    <string name="app_name">Aircraft</string>

    <string name="drawer_close">close</string>
    <string name="drawer_open">open</string>

    <string name="drawer_header">Авиастроительное предприятие</string>

    <string name="hello_text">Добро пожаловать в приложение!</string>

    <!--menu items-->
    <string name="home_menu_item_text">Начальная страница</string>
    <string name="company_title">Предприятие</string>
    <string name="company_menu_item_text">Предприятие</string>
    <string name="guild_menu_item_text">Цех</string>
    <string name="site_menu_item_text">Участок</string>
    <string name="staff_title">Персонал</string>
    <string name="brigades_menu_item_text">Бригады</string>
    <string name="staff_menu_title">Сотрудники</string>
    <string name="products_menu_title">Продукция</string>
    <string name="products_title">Изделия</string>
    <string name="tests_title">Испытания</string>
    <string name="test_labs_title">Испытательные лаборатории</string>
    <string name="accounting_menu_title">Учет продукции</string>
    <string name="stages_title">"Этапы изготовления</string>
    <string name="accounting_title">Учет</string>

    <!--Company fragment string resources-->
    <string name="button_show_all_companies_text">Показать все предприятия</string>
    <string name="button_add_company_text">Добавить предприятие</string>
    <string name="button_show_table_text">Посмотреть таблицу</string>

    <!--Guild fragment string resources-->
    <string name="button_show_all_guilds_text">Показать все цеха</string>
    <string name="button_add_guild_text">Добавить цех</string>

    <!--Site fragment string resources-->
    <string name="button_show_all_sites_text">Показать все участки</string>
    <string name="button_add_site_text">Добавить участок</string>

    <!--Products fragment string resources-->
    <string name="button_show_all_products_text">Показать всю продукцию</string>
    <string name="button_add_product_text">Добавить продукцию</string>

    <!--Products all fragment-->
    <string name="choose_product_text">Выберите категорию изделий</string>

    <!--Staff fragment string resources-->
    <string name="button_show_all_staff_text">Показать всех сотрудников</string>
    <string name="button_add_staff_text">Добавить сотрудника</string>

    <!--Staff all fragment-->
    <string name="choose_category_text">Выберите специальность сотрудников</string>
    <string-array name="staff_categories">
        <item>Инженеры</item>
        <item>Техники</item>
        <item>Сборщики</item>
        <item>Токари</item>
        <item>Слесари</item>
        <item>Сварщики</item>
        <item>Испытатели</item>
        <item>Все</item>
    </string-array>

    <!--Add company fragment -->
    <string name="add_company_text">Добавить предприятие</string>
    <string name="company_name_field">Название предприятия</string>

    <!--Detail company fragment-->
    <string name="change_company_name">Изменить название</string>
    <string name="success_company_name_change">Название успешно изменено</string>
    <string name="delete_company_dialog_message">Вы уверены,
        что хотите удалить данное предприятие?</string>
    <string name="company_success_delete">Компания успешно удалена</string>
    <string name="company_detail_guilds">Цеха</string>
    <string name="show_products">Продукция</string>
    <string name="show_staff">Персонал</string>
    <string name="show_sites">Участки</string>

    <!--Detail guild fragment-->
    <string name="guild_name_field">Название цеха</string>
    <string name="guild_manager">Менеджер цеха</string>
    <string name="add_guild">Добавить цех</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Some fragments text-->
    <string name="load_text">Загрузка…</string>
    <string name="error_text">Что-то пошло не так…</string>
    <string name="error_already_exist">Элемент с данным именем уже существует</string>
    <string name="load_success">Элемент успешно добавлен</string>
    <string name="save_changes">Сохранить</string>
    <string name="delete_element">Удалить</string>
    <string name="delete_dialog_title">Подтверждение удаления</string>
    <string name="dialog_ok">Да</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="change">Изменить</string>
    <string name="save_all">Сохранить все изменения</string>
    <string name="show">Показать</string>
    <string name="add">Добавить</string>
    <string name="update_success">Элемент успешно обновлен</string>
    <string name="success_delete">Элемент успешно удален</string>


    <string name="button_show_all_stages_text">Показать все этапы</string>
    <string name="button_add_stage_text">Добавить этап</string>

    <!--Stage detail fragment-->
    <string name="stage_title">Этап изготовления</string>
    <string name="stage_name">Название этапа</string>

    <!--Site detail fragment-->
    <string name="work_type">Тип работ</string>
    <string name="site_manager">Начальник участка</string>

    <!--Staff detail fragment-->
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="specialty">Специальность</string>
    <string name="brigade">Бригада</string>

    <!--Range fragments-->
    <string name="show_all_ranges">Показать все лаборатории</string>
    <string name="add_range">Добавить лабораторию</string>
    <string name="ranges_table">Таблица лабораторий</string>
    <string name="element_name">Название</string>
    <string name="guilds">Цеха</string>
    <string name="add_guilds">Добавить цеха</string>
    <string name="change_guilds">Изменить цеха</string>

    <string name="equipment">Оборудование</string>

    <string name="all_accounting">Весь учет</string>
    <string name="accounting_table">Таблица учета</string>
    <string name="add_accounting">Добавить позицию учета</string>
    <string name="product">Изделие</string>
    <string name="stage">Стадия</string>
    <string name="site">Участок</string>
    <string name="test">Испытание</string>
    <string name="begin_time">Дата начала</string>
    <string name="end_time">Дата окончания</string>
    <string name="date_hint">yyyy-mm-dd hh:mm:ss</string>
    <string name="category">Категория</string>
    <string name="guild">Цех</string>
    <string name="type">Тип</string>
    <string name="weight">Вес</string>

    <string name="set_date">Установить</string>
    <string name="products">Продукция</string>
    <string name="not_set">Не установлена</string>
    <string name="show_types">Показать виды</string>
    <string name="build_now">Собираются сейчас</string>
    <string name="choose_date">Выберите дату</string>
    <string name="show_by_date">Показать по датам</string>
    <string name="tested_products">Тестируемая продукция</string>
    <string name="sites">Участки</string>
    <string name="works">Работы</string>

    <string name="show_all_brigades">Показать все бригады</string>
    <string name="add_brigade">Создать бригаду</string>
    <string name="brigade_success_create">Бригада успешно создана</string>
    <string name="brigade_structure">Состав бригады</string>
    <string name="brigades">Бригады</string>
    <string name="labs">Лаборатории</string>
    <string name="testers">Испытатели</string>
    <string name="foreman">Бригадир</string>

    <string name="show_all_equipment">Показать все оборудование</string>
    <string name="add_equipment">Добавить оборудование</string>

    <string name="range">Испытательная лаборатория</string>
    <string name="save">Сохранить</string>

    <string name="show_all_tests">Показать все испытания</string>
    <string name="add_test">Добавить испытание</string>

    <string name="engine_amount">Количество двигателей</string>
    <string name="charge_power">Мощность заряда</string>
    <string name="product_parameter_rule">Параметр изделия должен быть больше 0</string>

    <string name="tester">Испытатель</string>
    <string name="enter_type">Введите тип</string>
</resources>
