<menu xmlns:android="http://schemas.android.com/apk/res/android">

<item
    android:id="@+id/home"
    android:icon="@drawable/ic_home_black_24dp"
    android:title="@string/home_menu_item_text"
    />

<item android:title="@string/company_title">
    <menu>
        <item
            android:id="@+id/company_menu_item"
            android:title="@string/company_menu_item_text" />
        <item
            android:id="@+id/guild_menu_item"
            android:title="@string/guild_menu_item_text" />

        <item
            android:id="@+id/site_menu_item"
            android:title="@string/site_menu_item_text"
            />
    </menu>
</item>

    <item android:title="@string/staff_title">
        <menu>
            <item
                android:id="@+id/staff_menu_item"
                android:title="@string/staff_menu_title" />
        </menu>
    </item>

    <item android:title="@string/products_menu_title">
        <menu>
            <item
                android:id="@+id/products_menu_item"
                android:title="@string/products_title" />
        </menu>
    </item>

    <item android:title="@string/tests_title">
        <menu>
            <item
                android:id="@+id/test_labs_menu_item"
                android:title="@string/test_labs_title" />
            <item
                android:id="@+id/tests_menu_item"
                android:title="@string/tests_title" />

        </menu>
    </item>

</menu>