<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="100dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".view.staff.brigade.BrigadeMainFragment">

    <ImageView
        android:id="@+id/equipment_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/brigades_menu_item_text"
        android:src="@drawable/brigades" />

    <Button
        android:id="@+id/button_equipment_show_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/equipment_image"
        android:layout_centerHorizontal="true"
        android:text="@string/show_all_brigades" />

    <Button
        android:id="@+id/button_add_equipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_equipment_show_all"
        android:layout_alignStart="@id/button_equipment_show_all"
        android:layout_centerHorizontal="true"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/add_brigade" />

    <Button
        android:id="@+id/button_show_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_add_equipment"
        android:layout_alignStart="@id/button_equipment_show_all"
        android:layout_centerHorizontal="true"
        android:paddingTop="16dp"
        android:text="@string/button_show_table_text" />

</RelativeLayout>