<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="100dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".view.company.company.CompanyFragment">

    <ImageView
        android:id="@+id/company_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/company_title"
        android:src="@drawable/company" />

    <Button
        android:id="@+id/button_company_show_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/company_image"
        android:layout_centerHorizontal="true"
        android:text="@string/button_show_all_companies_text" />

    <Button
        android:id="@+id/button_add_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_company_show_all"
        android:layout_alignStart="@id/button_company_show_all"
        android:layout_centerHorizontal="true"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/button_add_company_text" />

    <Button
        android:id="@+id/button_show_companies_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_add_company"
        android:layout_alignStart="@id/button_company_show_all"
        android:layout_centerHorizontal="true"
        android:paddingTop="16dp"
        android:text="@string/button_show_table_text" />

</RelativeLayout>